# Tiger-IR-Middle-End

./: CONTRIBUTING.md  LICENSE  README.md  cfg.dot  dune  dune-project  new.dot  og.dot  optimized.ir  tigerirmiddleend.opam
lib/: dune  tigerirmiddleend.mli
test/: dune  tigerirmiddleend_test.ml
